# discord-bot

./: .gitignore  Cargo.toml  README.md
src/: bot.rs  main.rs  plugin.rs
src/plugins/: anime.rs  bully.rs  fourchan.rs  meme.rs  mod.rs
